# LLM-for-SR

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-DATA.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: reproduce.yml
data/: README.md  codebook.csv
data/locked/: sr1.csv  sr2.csv  sr3.csv
docs/: analysis_contract.md  why_kappa_can_decrease.md
prompts/: README.md  full_text_pdf_system_prompt_v1.md  input_templates.md  system_prompt_v1.md
prompts/criteria/: sr1_vaccination_v1.md  sr2_post_covid_v1.md  sr3_atopy_v1.md
provenance/: README.md  checksums.sha256  reconciliation_decisions.csv  run_manifest.csv
results/: README.md
results/published/: heterogeneity.csv  table1_validity.csv  table2_agreement.csv
scripts/: check_public_release.py  generate_checksums.py
src/llm_sr_benchmark/: __init__.py  analysis.py  cli.py  metrics.py  validation.py
tests/: test_metrics.py  test_reproduction.py
