[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-sr-benchmark"
version = "1.0.0"
description = "Offline reproduction of LLM screening validity and agreement results for three systematic reviews"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "The LLM-for-SR contributors"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = []

[project.scripts]
llm-sr-benchmark = "llm_sr_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

